<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/textMarginLeft"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/lblApiKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelApiKey"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/txtApiKey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/apiKeyDefault" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnFetch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="fetchData"
            android:text="@string/labelFetch" />

        <ProgressBar
            android:id="@+id/spinFetch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:indeterminate="true"
            android:visibility="invisible" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/layoutDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblSectionCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblSectionCount"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtSectionCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/unknown"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblStudentCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblStudentCount"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtStudentCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/unknown"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblStuPerSec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblStudentsPerSection"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtStuPerSec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/unknown"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txtLog"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

</LinearLayout>